--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,14 +2,18 @@
     "version": 2,
     "builds": [
         {
-            "src": "*server.js",
+            "src": "server.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
+            "src": "/api/(.*)",
+            "dest": "/api/index.js"
+        },
+        {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "/public/$1"
         }
     ]
 }
